--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Steal a Brainrot - Steal a Brainrot</title>
     <meta name="keywords" content="steal a brainrot">
     <meta name="news_keywords" content="steal a brainrot">
-    <meta name="description" content="Steal a Brainrot - Steal a Brainrot">
+    <meta name="description" content="Welcome to Steal a Brainrot, a thrilling mix of heist game, strategy game, and multiplayer game all in one, which puts you in the middle of meme-fueled chaos where every move matters.">
     <link rel="stylesheet" type="text/css" href="rs/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -267,4 +267,5 @@
     <script src="rs/js/footer.js"></script>
 </footer>
 </body>
+
 </html>
