--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 <p>Build your base, collect resources, and outsmart your rivals while chasing the ultimate goal: becoming the ruler of the Italian animal empire.</p>
 <h2>What is Steal a Brainrot?</h2>
 <p>At its heart, Steal a Brainrot is about risk, reward, and clever planning. You can buy Brainrots from the conveyor belt, place them on a pillar, and watch them earn money for you over time. But this is not just a passive game&mdash;other players can steal your Brainrots, and you must defend your base with weapons, locks, and shields that last up to 60 seconds.</p>
-<p>The competitive element makes every session exciting. Will you sneak into someone else&rsquo;s base to take their Brainrots, or will you focus on upgrading your own defenses? The choice is yours.</p>
+<p>The competitive element makes every session exciting. Will you sneak into someone else&rsquo;s base to take their Brainrots, or will you focus on upgrading your own defenses? The choice is yours. You can play <a href="https://humanexpenditureprogram.github.io/">Human Expenditure Program</a>, a newly released game that is considered as BloodMoney 2, an indie horror game with an engaging story.</p>
 <h2>How to Play Steal a Brainrot Online</h2>
 <p>You can play <strong>Steal a Brainrot Online</strong> completely free at&nbsp;<a href="https://stealabrainrotgame.github.io/">https://stealabrainrotgame.github.io/</a> on your browser without downloading. If you enjoy strategic multiplayer games with a heist twist, Steal a Brainrot is the perfect choice. Buy, steal, defend, and expand your empire in a world where every player competes for wealth and power.</p>
 <h2>Core Gameplay and Strategy</h2>
@@ -278,5 +278,6 @@
 </body>
 
 </html>
+
 
 
