--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                 </div>
                 <nav class="navigation">
                     <ul>
+						                            <li>
+                                <a class="menu-link" href="https://stealabrainrot2.io/">
+                                    <span class="text-menu-link">Steal a Brainrot</span>
+                                </a>
+                            </li>
                                                     <li>
                                 <a class="menu-link" href="/merge-brainrot">
                                     <span class="text-menu-link">Merge Brainrot</span>
@@ -278,6 +283,7 @@
 </body>
 
 </html>
+
 
 
 
