--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                         </div>
                         <div class="text-area--content">
                             <h2>About Steal a Brainrot</h2><p>Welcome to <strong><a href="https://stealabrainrotgame.github.io/">Steal a Brainrot</a></strong>, a thrilling mix of heist game, strategy game, and multiplayer game all in one, which puts you in the middle of meme-fueled chaos where every move matters.</p>
-<p>Build your base, collect resources, and outsmart your rivals while chasing the ultimate goal: becoming the ruler of the Italian animal empire.</p>
+<p>Build your base, collect resources, and outsmart your rivals while chasing the ultimate goal: becoming the ruler of the Italian animal empire. If you want to play more Roblox games, try <a href="https://99nightsintheforest.github.io/">99 Nights in the Forest</a>. The horror game puts you on a mission to survive 99 terrifying nights.</p>
 <h2>What is Steal a Brainrot?</h2>
 <p>At its heart, Steal a Brainrot is about risk, reward, and clever planning. You can buy Brainrots from the conveyor belt, place them on a pillar, and watch them earn money for you over time. But this is not just a passive game&mdash;other players can steal your Brainrots, and you must defend your base with weapons, locks, and shields that last up to 60 seconds.</p>
 <p>The competitive element makes every session exciting. Will you sneak into someone else&rsquo;s base to take their Brainrots, or will you focus on upgrading your own defenses? The choice is yours. You can play <a href="https://humanexpenditureprogram.github.io/">Human Expenditure Program</a>, a newly released game that is considered as BloodMoney 2, an indie horror game with an engaging story.</p>
@@ -283,6 +283,7 @@
 </body>
 
 </html>
+
 
 
 
