--- a/italian-brainrot-clicker.html
+++ b/italian-brainrot-clicker.html
@@ -3,6 +3,10 @@
 
 <head>
     <meta charset="utf-8">
+	<meta http-equiv="refresh" content="0; url=https://stealabrainrotgame.github.io/italian-brainrot-clicker">
+    <script type="text/javascript">
+        window.location.href = "https://stealabrainrot2.io/italian-brainrot-clicker"
+    </script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="content-language" content="en">
@@ -244,4 +248,5 @@
     <script src="rs/js/footer.js"></script>
 </footer>
 </body>
+
 </html>
