--- a/italian-brainrot-animals-attack-3d.html
+++ b/italian-brainrot-animals-attack-3d.html
@@ -3,6 +3,10 @@
 
 <head>
     <meta charset="utf-8">
+	<meta http-equiv="refresh" content="0; url=https://stealabrainrotgame.github.io/italian-brainrot-animals-attack-3d">
+    <script type="text/javascript">
+        window.location.href = "https://stealabrainrot2.io/italian-brainrot-animals-attack-3d"
+    </script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="content-language" content="en">
@@ -259,3 +263,4 @@
 </body>
 
 </html>
+
